feat: crud forums and posts
